Add completable future + spark + testes